feat: add CodeReview model with MongoDB ObjectId support
Implements CodeReview model with:
- Custom PyObjectId type for MongoDB compatibility
- ReviewStatus enum for tracking review state
- Base fields for repository URL and timestamps

--- a/.gitignore
+++ b/.gitignore
@@ -401,3 +401,21 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 ai-codereview-api-vault/.obsidian/workspace.json
+
+.env
+
+# Python
+venv/
+.env
+__pycache__/
+*.pyc
+
+# MongoDB
+mongodb_data/
+
+# IDE
+.idea/
+.vscode/
+
+# Logs
+*.log
