--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,13 @@ pydantic==2.5.3
 pydantic-settings==2.1.0
 anthropic==0.7.8
 python-dotenv==1.0.0
-pymongo[srv]==4.6.1 
+pymongo[srv]==4.6.1
+
+# Testing dependencies
+pytest==7.4.4
+pytest-asyncio==0.23.3
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+mongomock-motor==0.0.25
+httpx==0.26.0
+asgi-lifespan==2.1.0 
