Initial feature -  REST API's  (#1)
Initial feature - Adding REST APIs

--- a/.gitignore
+++ b/.gitignore
@@ -401,3 +401,25 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 ai-codereview-api-vault/.obsidian/workspace.json
+
+.env
+
+# Python
+venv/
+.venv/
+.env
+__pycache__/
+*.pyc
+
+# MongoDB
+mongodb_data/
+
+# IDE
+.idea/
+.vscode/
+
+# Logs
+*.log
+
+# Test environment variables
+.env.test
