updating .env.example to clean up the mongdb URL and fixed version in requirements.txt

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-MONGO_URI=mongodb://root:example@localhost:27017/code_reviews
+MONGO_URI=mongodb://root:example@localhost:27017
 ANTHROPIC_API_KEY=sk-ant-xxxx...
 
 # Logging Configuration
