--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,6 @@ pydantic-settings==2.7.1
 anthropic==0.42.0
 python-dotenv==1.0.1
 pymongo[srv]==4.9.2
-
-# Testing dependencies
 pytest==8.3.4
 pytest-asyncio==0.25.2
 pytest-cov==6.0.0
@@ -15,5 +13,5 @@ pytest-mock==3.14.0
 mongomock-motor==0.0.34
 httpx==0.28.1
 asgi-lifespan==2.1.0
-
 tiktoken>=0.5.1
+gitpython
