feat: add LLM testing feature toggle for standards files
- Add LLM_TESTING boolean flag to enable test mode
- Add LLM_TESTING_STANDARDS_FILES to configure test files
- Update process_standards_repo to use test files when enabled

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ LOG_LEVEL=INFO
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=example
 MONGO_INITDB_DATABASE=code_reviews 
+
+# Feature Flags
+LLM_TESTING=false 
+LLM_TESTING_STANDARDS_FILES=code_review_standards.md,python_standards.md 
