--- a/pytest.ini
+++ b/pytest.ini
@@ -9,5 +9,6 @@ asyncio_mode = auto
 addopts = 
     --cov=src
     --cov-report=term-missing
-    --cov-report=html
+    --cov-report=html:coverage/html
+    --cov-report=xml:coverage/coverage.xml
     --cov-fail-under=90 
