test: Enhance code reviews agent test suite with comprehensive test cases
- Added new pytest markers for prompt generation and compliance checking tests
- Refactored `test_code_reviews_agent.py` with improved test organization and fixtures
- Introduced parameterized and more granular tests for prompt generation and compliance checking
- Added test constants and common test utilities to improve test readability and maintainability
- Expanded test coverage for edge cases like empty/long standard content and API error handling

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,4 +12,8 @@ addopts =
     --cov-report=term-missing
     --cov-report=html:coverage/html
     --cov-report=xml:coverage/coverage.xml
-    --cov-fail-under=90 
+    --cov-fail-under=90
+
+markers =
+    prompt_generation: Tests for prompt generation functionality
+    compliance_checking: Tests for compliance checking functionality 
