--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
-# API Configuration
-MONGO_URI=mongodb://root:example@localhost:27017
-ANTHROPIC_API_KEY=sk-ant-xxxx...
-
-# Logging Configuration
+# Logging Settings
 LOG_LEVEL=INFO
 
-# MongoDB Docker Configuration
+# Anthropic Settings
+ANTHROPIC_API_KEY=sk-ant-xxxx...
+ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
+ANTHROPIC_MAX_TOKENS=8192
+ANTHROPIC_TEMPERATURE=0.0
+
+# MongoDB Docker Settings
+MONGO_URI=mongodb://root:example@localhost:27017
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=example
 MONGO_INITDB_DATABASE=code_reviews 
