--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,17 @@
 LOG_LEVEL=INFO
 
 # Anthropic Settings
+ANTHROPIC_BEDROCK=false # Set to true to use Bedrock Anthropic client. Otherwise false to use default Anthropic client
 ANTHROPIC_API_KEY=sk-ant-xxxx...
 ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
 ANTHROPIC_MAX_TOKENS=8192
 ANTHROPIC_TEMPERATURE=0.0
+
+# AWS Settings, used by Bedrock
+AWS_ACCESS_KEY=xxxx
+AWS_SECRET_KEY=xxxx
+AWS_REGION=xxxx
+AWS_BEDROCK_MODEL=anthropic.claude-3-5-sonnet-20240620-v1:0
 
 # MongoDB Docker Settings
 MONGO_URI=mongodb://root:example@localhost:27017
