--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn==0.34.0
 motor==3.6.0
 pydantic==2.10.5
 pydantic-settings==2.7.1
-anthropic==0.42.0
+anthropic[bedrock]==0.42.0
 python-dotenv==1.0.1
 pymongo[srv]==4.9.2
 pytest==8.3.4
